# ETS-alpamayo

./: README.md  pyproject.toml
docs/: FINETUNE_SFT.md
finetune/rl/: run_rl_local_test_signal_node.sh  state.py
finetune/rl/hydra_configs/: alpamayo1_5_rvla_rl_pai.yaml  alpamayo1_rvla_rl_pai.yaml
finetune/rl/models/reasoning_vla/: base_model.py  config.py  data_packer.py  rollout.py
finetune/rl/notebooks/: rl_checkpoint_inference.ipynb
finetune/rl/prefetch/: test_prefetch.py
finetune/rl/toml/: alpamayo_rvla_rl_thomas_cluster_test.toml  alpamayo_rvla_rl_thomas_local_test.toml
finetune/rl/utils/: trajectory_decode.py
finetune/sft/: evaluate_hf.py  train_hf.py
finetune/sft/configs/: sft_base.yaml  vla_processor.yaml
finetune/sft/configs/models/: ar1_expert.yaml
finetune/sft/models/: sft_alpamayo_r1.py  sft_base_model.py
hugging_face/: LICENSE  model_card-10b-DO-NOT-RELEASE.md  model_card-10b-public.md  model_card-32b-DO-NOT-RELEASE.md
notebooks/: inference.ipynb  inspect_dataset.ipynb
src/alpamayo_r1/: helper.py  load_physical_aiavdataset.py  test_inference.py
src/alpamayo_r1/chat_template/: conversation.py
src/alpamayo_r1/common/: config_utils.py  distributed.py  misc.py  wandb_utils.py
src/alpamayo_r1/data/: pai.py  pai_utils.py
src/alpamayo_r1/metrics/: distance_metrics.py  metric_api.py  metric_runner.py  metric_utils.py
src/alpamayo_r1/models/: alpamayo_r1.py
src/alpamayo_r1/processor/: qwen_processor.py
src/alpamayo_r1/utils/: get_label_mask.py
src/alpamayo_r1/visualization/: viz.py
